--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   },
   "homepage": "https://github.com/HeldensBrecht/software-security-backend#readme",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
-    "jwks-rsa": "^1.11.0"
+    "jwks-rsa": "^1.11.0",
+    "mysql": "^2.18.1"
   }
 }
