--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "express-jwt": "^6.0.0",
     "jwks-rsa": "^1.11.0",
     "mysql": "^2.18.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.6"
   }
 }
